<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity"
        android:background="@color/background">
    <View
            android:id="@+id/topView"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_128sdp"
            android:background="@color/primary"
            app:layout_constraintTop_toTopOf="parent"
    ></View>
    <TextView
            android:id="@+id/textTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sample_dashboard"
            android:textSize="@dimen/_20ssp"
            android:textColor="@color/white"
            android:layout_marginStart="@dimen/_16sdp"
            android:layout_marginLeft="@dimen/_16sdp"
            android:layout_marginTop="@dimen/_16sdp"
            android:textStyle="bold"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"
    ></TextView>
    <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="@dimen/_26sdp"
            android:layout_height="@dimen/_26sdp"
            android:layout_marginRight="@dimen/_16sdp"
            android:layout_marginTop="@dimen/_16sdp"
            android:src="@drawable/ic_search"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="@+id/textTitle"
            android:tint="@color/white">

    </androidx.appcompat.widget.AppCompatImageView>

    <com.google.android.material.card.MaterialCardView
            android:id="@+id/cardHeader"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_16sdp"
            android:layout_marginLeft="@dimen/_16sdp"
            android:layout_marginRight="@dimen/_16sdp"
            android:layout_marginEnd="@dimen/_16sdp"
            android:background="@color/card_background"
            app:cardCornerRadius="16dp"

            app:layout_constraintBottom_toBottomOf="@+id/topView"
            app:layout_constraintTop_toBottomOf="@+id/topView"
    >
        <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/_14sdp"
        android:background="@color/light_blue">
            <TextView
                    android:id="@+id/shotViews"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/top_panel"
                    android:textStyle="bold"
                    android:textSize="@dimen/_14ssp"
                    android:textColor="@color/primary_text"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

            </TextView>
            <TextView
                    android:id="@+id/more"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/more"
                    android:textStyle="bold"
                    android:textSize="@dimen/_12ssp"
                    android:textColor="@color/primary"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

            </TextView>
            <LinearLayout
                    android:id="@+id/layoutClinet"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_8sdp"
                    android:gravity="center"
                    android:orientation="vertical"
                    app:layout_constraintEnd_toStartOf="@+id/layoutImpacted"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/shotViews"
            >
                <androidx.appcompat.widget.AppCompatImageView
                        android:layout_width="@dimen/_28sdp"
                        android:layout_height="@dimen/_28sdp"
                        android:src="@drawable/ic_user_male">

                </androidx.appcompat.widget.AppCompatImageView>
                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_4sdp"
                        android:text="@string/followers"
                        android:textColor="@color/secondary_text"
                        android:textSize="@dimen/_10ssp"
                ></TextView>
                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_4sdp"
                        android:text="@string/_750"
                        android:textColor="@color/primary_text"
                        android:textSize="@dimen/_16ssp"
                ></TextView>
            </LinearLayout>

            <LinearLayout
                    android:id="@+id/layoutImpacted"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_8sdp"
                    android:gravity="center"
                    android:orientation="vertical"
                    app:layout_constraintEnd_toStartOf="@+id/layoutFollowing"
                    app:layout_constraintStart_toEndOf="@+id/layoutClinet"
                    app:layout_constraintTop_toBottomOf="@+id/shotViews"

            >
                <androidx.appcompat.widget.AppCompatImageView
                        android:layout_width="@dimen/_28sdp"
                        android:layout_height="@dimen/_28sdp"
                        android:src="@drawable/working_laptop">

                </androidx.appcompat.widget.AppCompatImageView>
                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_4sdp"
                        android:text="@string/best_buddies"
                        android:textColor="@color/secondary_text"
                        android:textSize="@dimen/_10ssp"
                ></TextView>
                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_4sdp"
                        android:text="@string/_250"
                        android:textColor="@color/primary_text"
                        android:textSize="@dimen/_16ssp"
                ></TextView>
            </LinearLayout>
            <LinearLayout
                    android:id="@+id/layoutFollowing"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_8sdp"
                    android:gravity="center"
                    android:orientation="vertical"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/layoutImpacted"
                    app:layout_constraintTop_toBottomOf="@+id/shotViews"
            >
                <androidx.appcompat.widget.AppCompatImageView
                        android:layout_width="@dimen/_28sdp"
                        android:layout_height="@dimen/_28sdp"
                        android:src="@drawable/completed_task">

                </androidx.appcompat.widget.AppCompatImageView>
                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_4sdp"
                        android:text="@string/likes"
                        android:textColor="@color/secondary_text"
                        android:textSize="@dimen/_10ssp"
                ></TextView>
                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_4sdp"
                        android:text="@string/_1050"
                        android:textColor="@color/primary_text"
                        android:textSize="@dimen/_16ssp"
                ></TextView>
            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>

    <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:clipToPadding="true"
            android:overScrollMode="never"
            android:padding="@dimen/_16sdp"
            android:scrollbars="none"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cardHeader"
    >
        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
            <include layout="@layout/dashboard_item_1"></include>
            <include layout="@layout/dashboard_item_2"></include>
            <include layout="@layout/dashboard_item_3"></include>
            <include layout="@layout/dashboard_item_4"></include>
            <include layout="@layout/dashboard_item_5"></include>
        </LinearLayout>

    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>