<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_marginBottom="@dimen/_16sdp">

    <com.google.android.material.card.MaterialCardView
            android:layout_width="@dimen/_50sdp"
            android:layout_height="@dimen/_50sdp"
            app:cardBackgroundColor="@color/dashboard_item_3"
            android:background="@color/dashboard_item_3"
            android:layout_marginTop="@dimen/_16sdp"
            app:cardCornerRadius="@dimen/_14sdp"
            app:layout_constraintTop_toTopOf="parent"

            app:layout_constraintStart_toStartOf="parent"
    >

        <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="@dimen/_8sdp"
                android:src="@drawable/test_tube"
                android:tint="@color/white">
        </androidx.appcompat.widget.AppCompatImageView>
    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_16sdp"
            android:layout_marginLeft="@dimen/_16sdp"
            app:cardBackgroundColor="@color/card_background"
            app:cardCornerRadius="@dimen/_14sdp"
            app:cardElevation="0dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
    >

        <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_40sdp"
                android:layout_marginLeft="@dimen/_40sdp"
                android:layout_marginTop="@dimen/_16sdp"
                android:layout_marginRight="@dimen/_16sdp"
                android:layout_marginEnd="@dimen/_16sdp"
                android:layout_marginBottom="@dimen/_16sdp">
            <TextView
                    android:id="@+id/amountText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/_175"
                    android:textSize="@dimen/_14ssp"
                    android:textStyle="bold"
                    android:textColor="@color/primary"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent">

            </TextView>
            <TextView
                    android:id="@+id/titleTv"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/_8sdp"
                    android:layout_marginRight="@dimen/_8sdp"
                    android:text="@string/this_is_a_test_tube_for_testing"
                    android:textSize="@dimen/_14ssp"
                    android:textColor="@color/primary_text"
                    app:layout_constraintEnd_toStartOf="@+id/amountText"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
            >

            </TextView>
            <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/imageLocation"
                    android:layout_width="@dimen/_12sdp"
                    android:layout_height="@dimen/_12sdp"
                    android:src="@drawable/ic_location_24"
                    android:layout_marginTop="@dimen/_4sdp"
                    app:layout_constraintStart_toStartOf="@+id/titleTv"
                    app:layout_constraintTop_toBottomOf="@+id/titleTv"
                    android:tint="@color/secondary_text">
            </androidx.appcompat.widget.AppCompatImageView>
            <TextView
                    android:id="@+id/textLocation"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/mera_bharat_mahan"
                    android:textSize="@dimen/_10ssp"
                    android:textColor="@color/secondary_text"
                    app:layout_constraintTop_toTopOf="@+id/imageLocation"
                    app:layout_constraintBottom_toBottomOf="@+id/imageLocation"
                    app:layout_constraintStart_toEndOf="@+id/imageLocation"
            ></TextView>
            <TextView
                    android:id="@+id/textTime"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_4sdp"
                    android:text="@string/_10am_to_6pm"
                    android:textSize="@dimen/_10ssp"
                    android:textColor="@color/secondary_text"
                    app:layout_constraintTop_toBottomOf="@+id/textLocation"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="@+id/textLocation"
            ></TextView>


        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.card.MaterialCardView>


</androidx.constraintlayout.widget.ConstraintLayout>